--- a/src/styles/theme-config.css
+++ b/src/styles/theme-config.css
@@ -1,19 +1,20 @@
 
 :root{
-  --color-white: hsl(0, 0%, 100%);
+  --color-white: hsl(257, 100%, 99%);
   --color-dark: hsl(0, 0%, 10%);
-  --color-primary: rgba(230, 57, 70, 1);
-  --color-secondary: #F1FAEE;
+  --color-primary: hsl(241, 77%, 73%);
+  --color-secondary: hsl(128, 83%, 91%);
   --color-section-bg: #ececec;
   --color-primary-bg: #E63946;
   --color-custom-btn-bg: hsla(182, 42%, 46%, .3);
   --color-custom-btn-bg-hover: #1D3557;
   --color-heading: #1D3557;
   --color-main-bg: hsl(224, 1%, 85%);
-  --color-border: #e0e0e5;
+  /* --color-border: hsl(128, 83%, 91%); */
   --color-link-hover: #E63946;
+  --color-border: #00E5B0;
   --padding-content: .5em .85em;
-  --padding-navbar: .5em .85em;
+  --padding-navbar: 1.5em .85em;
 }
 * {
   margin: 0;
@@ -42,7 +43,3 @@ body {
     background-color: var(--color-white);
   }
 }
-
-
-
-
